# cardity-core

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  cardity_cli.cpp  debug_tokens  deploy_wallet.sh  package-lock.json  package.json  package_builder.cpp  package_builder.h  package_config.cpp  package_config.h  package_manager.cpp  package_manager.h  registry_client.cpp  registry_client.h  run_protocol.cpp  test_simple.cardity
compiler/: abi_generator_main.cpp  ast.cpp  ast.h  car_deployer.cpp  car_deployer.h  car_generator.cpp  car_generator.h  car_generator_ast.cpp  car_generator_ast.h  carc_generator.cpp  carc_generator.h  cardityc_main.cpp  debug_tokens.cpp  deploy_main.cpp  dogecoin_deployer.cpp  dogecoin_deployer.h  drc20_cli.cpp  drc20_compiler.cpp  drc20_compiler.h  drc20_parser.h  drc20_standard.cpp  drc20_standard.h  event_system.cpp  event_system.h  expression.cpp  expression.h  lexer.cpp  lexer.h  lexer_test.cpp  main.cpp  parser.cpp  parser.h  parser_ast.h  parser_test.cpp  runtime.cpp  runtime.h  runtime_main.cpp  semantic.cpp  semantic.h  tokenizer.cpp  (+3 more)
docs/: car_file_format_guide.md  cardity_development_guide.md  development_guide.md  drc20_guide.md  language_spec.md  package_management.md  release_guide.md  usdt_stablecoin_cardity.md
examples/: 00_minimal.car  01_hello_world.car  02_counter.car  03_wallet.car  04_drc20_token.car  05_event_demo.car  07_advanced_wallet.car  08_usdt_like.carc  09_cardi_stake_credit.car  README.md  advanced_wallet.car  conditional.car  counter.car  counter.carc  counter.cardity  demo_runtime.sh  drc20_token.car  event_demo.car  hello.car  hello_cardinals.carc  hello_cardinals.cardity  my_protocol.car  simple_counter.car  simple_wallet.car  token.cardity  typed_counter.car  wallet.car  wallet.carc  wallet_protocol.car
examples/_legacy/: 06_conditional_logic.car
examples/package_example/: cardity.json
examples/package_example/src/: index.car  index.cardity
examples/typescript_style/: main.cardity
examples/usdt_suite/: USDTLikeToken.car  USDTokenMeta.car
examples/usdt_suite/.cardity_check_build/: USDTLikeToken.json  USDTokenMeta.json
scripts/: build_downloads.sh  create_download_page.sh  mainnet_deploy_usdt.sh  postinstall.js  release.sh
